--- a/deployments/intro/deployment-v2.yml
+++ b/deployments/intro/deployment-v2.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: nginx:1.26.2
           ports:
             - containerPort: 80
 
