--- a/kubernetes-networking/networking/services.yml
+++ b/kubernetes-networking/networking/services.yml
@@ -14,6 +14,17 @@ spec:
     spec:
       containers:
         - name: hello-world
-          image: ubuntu
+          image: nginx
           ports:
             - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: node-service
+spec:
+  type: NodePort
+  selector:
+    app: hello-world
+  ports:
+    - port: 80
