--- a/storage-and-scheduling/logging/deployment.yml
+++ b/storage-and-scheduling/logging/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: hello-world
-          image: ubuntu
+          image: nginx
           ports:
             - containerPort: 8080
