--- a/storage-and-scheduling/logging/deployment.yml
+++ b/storage-and-scheduling/logging/deployment.yml
@@ -14,6 +14,5 @@ spec:
     spec:
       containers:
         - name: hello-world
-          image: nginx
-          ports:
-            - containerPort: 8080
+          image: ubuntu
+          args: [/bin/bash, -c, 'tail -f /dev/null']
