--- a/storage-and-scheduling/logging/multicontainer.yml
+++ b/storage-and-scheduling/logging/multicontainer.yml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: container1
           image: busybox
-          args: [/bin/sh, -c, 'while true; do echo "$(date)": $(hostname): container1; sleep 1; done']
+          # args: [/bin/sh, -c, 'while true; do echo "$(date)": $(hostname): container1; sleep 1; done']
         - name: container2
           image: busybox
-          args: [/bin/sh, -c, 'while true; do echo "$(date)": $(hostname): container2; sleep 1; done']
+          # args: [/bin/sh, -c, 'while true; do echo "$(date)": $(hostname): container2; sleep 1; done']
